SchoolSystem/SchoolSystem.WebForms/Content/Site.css
/* Move down content because we have a fixed navbar that is 50px tall */
body {
    padding-top: 50px;
    padding-bottom: 20px;
    color: #2196F3;
    /*background-image: url("../Images/background.jpg");
    background-size: 500px;*/
}

.body-content {
}

/*footer {
    position: relative;
    right: 80px;
    bottom: 20px;
    left: 5px;
    padding: 1rem;
}*/

/* Wrapping element */
/* Set some basic padding to keep content from hitting the edges */
.body-content {
}

/* Override the default bootstrap behavior where horizontal description lists 
   will truncate terms that are too long to fit in the left column 
*/
.dl-horizontal dt {
    white-space: normal;
}

/* Set widths on the form inputs since otherwise they're 100% wide */
input[type="text"],
input[type="password"],
input[type="email"],
input[type="tel"],
input[type="select"] {
    max-width: 280px;
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
    .jumbotron {
        margin-top: 20px;
    }

    .body-content {
        padding: 0;
    }
}

@media screen and (max-width: 900px) {
    .navbar-collapse.collapse {
        display: none !important;
    }

        .navbar-collapse.collapse.in {
            display: block !important;
        }

    .navbar-header .collapse, .navbar-toggle {
        display: block !important;
    }

    .navbar-header {
        float: none;
    }
}

@media (max-width:950px) {
    .news-feed {
        position: absolute;
    }
}

@media (max-width:750px) {
    .news-feed {
        position: initial;
    }
}

.header-menu {
    border-bottom: 1px solid #2196F3;
    background-color: white;
}

.navbar-nav > li > a {
    padding-bottom: 5.5px;
}

.frame {
    /*border: 1px solid #2196F3;*/
    width: 250px;
    height: 400px;
    display: inline-block;
    margin-top: 30px;
    background-color: white;
}

    .frame > h4 {
        color: #2196F3;
        text-align: center;
    }

h1, h2, h3, h4, h5, h6 {
    color: #2196F3;
}

.program, .top-news {
    width: 450px;
    margin-left: 5px;
}


.program{
    border: 2px solid #2196F3;
}

.top-news {
    border: 2px solid #2196F3;
}

.tab{
    margin:2px;
}

.news-feed {
    border: 2px solid #2196F3;
    margin-left: 10px;
    width: 280px;
}

.program-item {
}

.time {
    margin-left: 15px;
}

.time, .subject-info {
    display: inline-block;
}

.start-hour, .end-hour {
    font-size: 18px;
}

    .start-hour > span:nth-child(1) {
        color: green;
        font-weight: bold;
    }

    .end-hour > span:nth-child(1) {
        color: red;
        font-weight: bold;
    }

.subject-info {
    font-size: 18px;
    margin-left: 100px;
}

.subject-image {
    display: inline-block;
    margin-top: -30px;
}

hr {
    border-color: #2196F3;
    background-color: #2196F3;
    color: #2196F3;
}

.checkbox-scrollbar-container {
    overflow: auto;
    height: 150px;
    width: 400px;
}

.newsfeed-header-text, .importantNews-header-text {
    color: #2196F3;
    text-align: center;
}

.comments-hr {
    margin: 5px;
    position: relative;
    left: -20px;
    width: 278px;
}

.comment-box {
    width: 100%;
    resize: none;
    border: 1px solid #2196F3;
    font-size: 12px;
}

.comments-container-logged {
    overflow: auto;
    height: 230px;
}

.comments-container-notlogged {
    overflow: auto;
    height: 300px;
}

.importantNews-container {
    overflow: auto;
    height: 330px;
}

.comments-list, .importantNews-list {
    list-style: none;
    padding: 0;
}

.comment-list-item {
    border-bottom: 1px solid #2196F3;
    padding-bottom: 5px;
    margin: 5px;
    overflow: hidden;
    word-wrap: break-word;
}

.importantNews-list-item {
    border-bottom: 1px solid #2196F3;
    padding-bottom: 5px;
    margin: 5px;
    overflow: hidden;
    word-wrap: break-word;
}

    .importantNews-list-item > .date-created {
        color: grey;
        font-size: 12px;
        display: block;
    }

.date-created {
    color: grey;
    font-size: 10px;
    display: block;
}

.comment-content {
    font-size: 12px;
}

.importantNews-content {
    font-size: 16px;
}

.comment-user-avatar {
    height: 40px;
    float: left;
    margin-right: 5px;
    padding: 5px;
    vertical-align: middle;
    border: 1px solid #c8cbcd;
}

.importantNews-user-avatar {
    height: 55px;
    float: left;
    margin-right: 5px;
    padding: 5px;
    vertical-align: middle;
    border: 1px solid #c8cbcd;
}

